# eve_industry_terminal

./: .gitignore  Cargo.toml
src/: evedata.rs  main.rs  menu.rs  utils.rs
