[package]
name = "eve_industry_terminal"
version = "0.1.0"
authors = ["Michael Blesel <michaelblesel@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4.5"
serde={version="*", features=["derive"]}
serde_json="*"
num-format = "0.4.0"
